--- a/.github/workflows/correct.yml
+++ b/.github/workflows/correct.yml
@@ -168,6 +168,67 @@
 #             git push origin ${{ github.ref_name }}
 #           fi
 
+#03
+# name: Sync Repos2
+
+# on:
+#   push:
+#     branches:
+#       - 'rhoai-*'  # Trigger the workflow on pushes to any branch
+#     paths:
+#       - 'bundle/**'  # Trigger the workflow for changes to any file in the bundle directory
+#       - 'Dockerfiles/bundle.Dockerfile'  # Trigger the workflow for changes to the Dockerfile
+
+# permissions:
+#   contents: read
+#   packages: write
+#   id-token: write
+
+# jobs:
+#   sync:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout source repo
+#         uses: actions/checkout@v3
+#         with:
+#           repository: DevOps-automation-tasks/rhods-operator.git
+#           token: ${{ secrets.PAT_TOKEN }}
+#           path: source_repo
+#           ref: ${{ github.ref_name }}  # Explicitly specify the branch being built
+
+#       - name: Checkout target repo
+#         uses: actions/checkout@v3
+#         with:
+#           repository: DevOps-automation-tasks/RHOAI-Build-Config.git
+#           token: ${{ secrets.PAT_TOKEN }}
+#           path: target_repo
+#           ref: ${{ github.ref_name }}  # Explicitly specify the branch being built
+
+#       - name: Compare and Sync Changes
+#         run: |
+#           # Compare and copy only if different
+#           for file in $(find source_repo/bundle -type f); do
+#             target_file="target_repo/bundle/$(basename $file)"
+#             if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
+#               echo "Updating $target_file"
+#               cp "$file" "$target_file"
+#             fi
+#           done
+          
+#           # Check and copy Dockerfile if different
+#           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
+#             echo "Updating Dockerfile"
+#             cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+#           fi
+
+#       - name: Commit and Push Changes to Target Repo
+#         run: |
+#           cd target_repo
+#           git config user.name "GitHub Actions"
+#           git config user.email "actions@github.com"
+#           git add .
+#           git commit -m "Sync changes from source repo" || echo "No changes to commit"
+#           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
 name: Sync Repos2
 
@@ -206,19 +267,39 @@ jobs:
 
       - name: Compare and Sync Changes
         run: |
-          # Compare and copy only if different
-          for file in $(find source_repo/bundle -type f); do
-            target_file="target_repo/bundle/$(basename $file)"
-            if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
-              echo "Updating $target_file"
-              cp "$file" "$target_file"
-            fi
-          done
+          # Function to compare and sync files
+          sync_files() {
+            local source_dir=$1
+            local target_dir=$2
+
+            for file in $(find $source_dir -type f); do
+              relative_path=$(realpath --relative-to="$source_dir" "$file")
+              target_file="$target_dir/$relative_path"
+
+              if [ -f "$target_file" ]; then
+                if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
+                  echo "Updating $target_file"
+                  cp "$file" "$target_file"
+                else
+                  echo "No changes in $target_file"
+                fi
+              else
+                echo "New file detected, copying $file to target repo"
+                mkdir -p "$(dirname "$target_file")"
+                cp "$file" "$target_file"
+              fi
+            done
+          }
+
+          # Sync files from source_repo/bundle to target_repo/bundle
+          sync_files "source_repo/bundle" "target_repo/bundle"
           
-          # Check and copy Dockerfile if different
+          # Sync Dockerfile
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
             echo "Updating Dockerfile"
             cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+          else
+            echo "No changes in Dockerfile"
           fi
 
       - name: Commit and Push Changes to Target Repo
@@ -229,4 +310,5 @@ jobs:
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
+
 
