--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -137,8 +137,11 @@ jobs:
 
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
-          sed -i '/channels:/d' source_repo/bundle/metadata/annotations.yaml
-          sed -i '/defaultChannel:/d' source_repo/bundle/metadata/annotations.yaml
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
+          sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
+    
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1"
+          sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
       - name: Retain current image digests in the RBC repo
         run: |
