--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -156,6 +156,10 @@ jobs:
           container_image=$(grep -oP 'containerImage:\s*\K\S+' /tmp/rbc_csv.yaml)
           sed -i "s|containerImage: .*|containerImage: $container_image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
+          # Update the operator image in the containerImage field
+          operator_image=$(grep -oP 'image:\s*\K\S+' /tmp/rbc_csv.yaml)  # Adjust this line to get the correct operator image
+          sed -i "s|containerImage: .*|containerImage: $operator_image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+
       - name: Sync RELATED_IMAGE values
         run: |
           # Sync RELATED_IMAGE values from source CSV to target CSV
