--- a/bundle/manifests/rhods-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/rhods-operator.clusterserviceversion.yaml
@@ -1721,6 +1721,37 @@ spec:
                       fieldPath: metadata.namespace
                 - name: DEFAULT_MANIFESTS_PATH
                   value: /opt/manifests
+                - name: RELATED_IMAGE_ODH_DASHBOARD_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-dashboard-rhel8@sha256:6eac34b3cc7ea29b55b45c9d5e74363e8a9d3fefc916c45e50f66d160561d8df"
+                - name: RELATED_IMAGE_ODH_KF_NOTEBOOK_CONTROLLER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-kf-notebook-controller-rhel8@sha256:79c44e946803cf65ecde572f3da3f81e55c079237a1fd7e70a8cba1d028bbf06"
+                - name: RELATED_IMAGE_ODH_NOTEBOOK_CONTROLLER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-notebook-controller-rhel8@sha256:9dbb8d0edda4335a5e00f60fbb2696de4806df5c0318e914648010070940546c"
+                - name: RELATED_IMAGE_ODH_ML_PIPELINES_PERSISTENCEAGENT_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-ml-pipelines-persistenceagent-rhel8@sha256:471bfbc9606ad5c2a208989a79535c5d9c04a4c9033ae1cd02cb4977da6e286e"
+                - name: RELATED_IMAGE_ODH_ML_PIPELINES_API_SERVER_IMAGE
+                  value: "registry-proxy.engineering.redhat.com/rh-osbs/managed-open-data-hub-odh-ml-pipelines-api-server-container-rhel8:v2.13.0-4"
+                - name: RELATED_IMAGE_ODH_ML_PIPELINES_CACHE_IMAGE
+                  value: "registry-proxy.engineering.redhat.com/rh-osbs/managed-open-data-hub-odh-ml-pipelines-cache-container-rhel8:v2.13.0-4"
+                - name: RELATED_IMAGE_ODH_ML_PIPELINES_SCHEDULEDWORKFLOW_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-ml-pipelines-scheduledworkflow-rhel8@sha256:88782d9ef9e1cc68770d2a66cc03a645fd0c3d1ee7c40014c7fcb2be0cde4816"
+                - name: RELATED_IMAGE_ODH_ML_PIPELINES_ARTIFACT_MANAGER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-ml-pipelines-artifact-manager-rhel8@sha256:d096809383d6b29e5658d3da2bbb9535b48c4589aa90e2cf6da5df4f7a32c70c"
+                - name: RELATED_IMAGE_ODH_DATA_SCIENCE_PIPELINES_OPERATOR_CONTROLLER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-data-science-pipelines-operator-controller-rhel8@sha256:eefbf921747c84a11d9fdde7058d24af2a5eb8ee167661a1c9fe6819309eacd4"
+                - name: RELATED_IMAGE_ODH_MODELMESH_CONTROLLER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-modelmesh-serving-controller-rhel8@sha256:f1bf468b5c775eb84e37be7bc72b08b9d8484846e7128c1c927bc8126d033c08"
+                - name: RELATED_IMAGE_ODH_MODEL_CONTROLLER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-model-controller-rhel8@sha256:64ba6141ee7e958130c7c2593b4901e3175ff026a17769baab72c2497300f781"
+                - name: RELATED_IMAGE_ODH_MM_REST_PROXY_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-mm-rest-proxy-rhel8@sha256:fa71a4590cee43d66cb04d6d6794e4d4fc326fdf81cb2d1de6f0cb8cabe43be4"
+                - name: RELATED_IMAGE_ODH_MODELMESH_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-modelmesh-rhel8@sha256:68e8e63e27ee8b9c15ae60db4a264d4c6eb90d9aa5e9baf887f3dc92bb4bd9db"
+                - name: RELATED_IMAGE_ODH_MODELMESH_RUNTIME_ADAPTER_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-modelmesh-runtime-adapter-rhel8@sha256:5048bbc2b8783232be4f62cdee568d68c8782ac377e0a9450760e9af9c03ecfc"
+                - name: RELATED_IMAGE_ODH_TRUSTYAI_SERVICE_IMAGE
+                  value: "registry.redhat.io/rhoai/odh-trustyai-service-rhel8@sha256:f3ea69d723bdb8ecd7221c70b117321695684654592387156c4fad372207f630"
+                - name: RELATED_IMAGE_ODH_TRUSTYAI_SERVICE_OPERATOR_IMAGE
                 image: REPLACE_IMAGE:latest
                 imagePullPolicy: Always
                 livenessProbe:
