--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -114,6 +114,13 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - name: Install yq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+          sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
+
       - name: Checkout source repo
         uses: actions/checkout@v3
         with:
@@ -132,44 +139,52 @@ jobs:
 
       - name: Remove unnecessary fields from CSV
         run: |
-          sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
-          sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          yq eval 'del(.spec.skipRange)' -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          yq eval 'del(.spec.replaces)' -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
-          sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-    
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1"
-          sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
+          yq eval 'del(.annotations."operators.operatorframework.io.bundle.channels.v1")' -i source_repo/bundle/metadata/annotations.yaml
+          yq eval 'del(.annotations."operators.operatorframework.io.bundle.channel.default.v1")' -i source_repo/bundle/metadata/annotations.yaml
+
+      - name: Remove labels from Dockerfile
+        run: |
+          yq eval 'del(.LABELS."operators.operatorframework.io.bundle.channels.v1")' -i source_repo/Dockerfiles/bundle.Dockerfile
+          yq eval 'del(.LABELS."operators.operatorframework.io.bundle.channel.default.v1")' -i source_repo/Dockerfiles/bundle.Dockerfile
 
       - name: Retain current image digests in the RBC repo
         run: |
-          # Backup current image digests
-          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/rbc_csv.yaml
-          # Replace image digests in the source CSV with the ones from the target repo
-          for image in $(grep -oP 'image:\s*\K\S+' /tmp/rbc_csv.yaml); do
-            sed -i "s|image: .*|image: $image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          # Backup the current image digests from the target repo CSV
+          yq eval '.spec.relatedImages[] | select(.name == "rhods-operator")' target_repo/bundle/manifests/*.clusterserviceversion.yaml > /tmp/rbc_csv.yaml
+          
+          # Replace image digests in the source CSV with the backed up ones
+          for image in $(yq eval '.image' /tmp/rbc_csv.yaml); do
+            yq eval ".spec.relatedImages[] |= (.image = \"$image\")" -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
           done
 
-      - name: Sync RELATED_IMAGE values
+      - name: Sync RELATED_IMAGE and relatedImages sections
         run: |
-          # Sync RELATED_IMAGE values from source CSV to target CSV
-          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' source_repo/bundle/manifests/*.clusterserviceversion.yaml); do
-            key=$(echo $related_image | cut -d= -f1)
-            value=$(echo $related_image | cut -d= -f2)
-            sed -i "s|$key=.*|$key=$value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          yq eval '.spec.relatedImages' source_repo/bundle/manifests/*.clusterserviceversion.yaml > /tmp/relatedImages_section.yaml
+          
+          # Ensure relatedImages section is not deleted
+          yq eval 'del(.spec.relatedImages)' -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          
+          # Add the extracted relatedImages section back to the source CSV
+          yq eval-all 'select(fileIndex == 0) * select(fileIndex == 1)' source_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/relatedImages_section.yaml > /tmp/new_csv.yaml
+          mv /tmp/new_csv.yaml source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          
+          # Sync RELATED_IMAGE values from target repo to source CSV
+          for related_image in $(yq eval '.spec.relatedImages[].name' /tmp/rbc_csv.yaml); do
+            image_value=$(yq eval ".spec.relatedImages[] | select(.name == \"$related_image\").image" /tmp/rbc_csv.yaml)
+            yq eval ".spec.relatedImages[] |= select(.name == \"$related_image\").image = \"$image_value\"" -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
           done
 
       - name: Verify RELATED_IMAGE Values
         run: |
-          for related_image in $(grep -oP 'RELATED_IMAGE_\w+:\s*\K\S+' target_repo/bundle/manifests/*.clusterserviceversion.yaml); do
-            echo "Found RELATED_IMAGE: $related_image"
-          done
+          yq eval '.spec.relatedImages[] | .name + ": " + .image' source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
       - name: Compare and Sync Changes
         run: |
-          # Function to compare and sync files
           sync_files() {
             local source_dir=$1
             local target_dir=$2
@@ -190,23 +205,9 @@ jobs:
               fi
             done
           }
-          # Sync files from source_repo/bundle to target_repo/bundle
           sync_files "source_repo/bundle" "target_repo/bundle"
-          
+
           # Sync Dockerfile
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
-            echo "Updating Dockerfile"
             cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
-          else
-            echo "No changes in Dockerfile"
           fi
-
-      - name: Commit and Push Changes to Target Repo
-        run: |
-          cd target_repo
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add .
-          git commit -m "Sync changes from source repo" || echo "No changes to commit"
-          git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
-
