--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -161,12 +161,24 @@ jobs:
 
       - name: Restore RELATED_IMAGE and relatedImages sections
         run: |
-          # Restore the relatedImages and RELATED_IMAGE_ sections
-          yq eval-all 'select(fileIndex == 0) | .spec.relatedImages = load("/tmp/relatedImages_backup.yaml")' source_repo/bundle/manifests/*.clusterserviceversion.yaml > /tmp/new_csv.yaml
+          # Check if CSV file exists before restoring values
+          if ls source_repo/bundle/manifests/*.clusterserviceversion.yaml 1> /dev/null 2>&1; then
+          # Restore the relatedImages section
+          echo "Restoring relatedImages section."
+          yq eval 'select(fileIndex == 0) | .spec.relatedImages = load("source_repo/bundle/manifests/*.clusterserviceversion.yaml").spec.relatedImages' source_repo/bundle/manifests/*.clusterserviceversion.yaml > /tmp/new_csv.yaml
           mv /tmp/new_csv.yaml source_repo/bundle/manifests/*.clusterserviceversion.yaml
-          while read -r line; do
-            yq eval ".spec.env[] |= (.name |= \"$line\")" -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
-          done < /tmp/related_env_vars.yaml
+
+          # Restore the RELATED_IMAGE environment variables
+          if [ -f /tmp/related_env_vars.yaml ]; then
+            echo "Restoring RELATED_IMAGE environment variables."
+            while read -r line; do
+              # Update the environment variables in the CSV based on the lines from the backup
+              yq eval ".spec.env[] |= (.name |= \"$line\")" -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
+              done < /tmp/related_env_vars.yaml
+            fi
+          else
+            echo "No CSV file found. Skipping restoration of relatedImages and RELATED_IMAGE environment variables."
+          fi                
 
       - name: Verify RELATED_IMAGE Values
         run: |
